<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoText="false"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/textView" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/textView2" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/textView3" />

    <Button
        android:id="@+id/button"
        android:text="@string/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/editText"
        android:text="@string/EditText"
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="18"
        android:inputType="date"
        tools:ignore="LabelFor" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="121dp"
        android:layout_marginTop="28dp"
        android:verticalScrollbarPosition="left"
        android:visibility="invisible">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"

                android:layout_width="95dp"
                android:layout_height="97dp"
                android:contentDescription="@string/ImageView"
                android:visibility="invisible"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/imageView2"

                android:layout_width="95dp"
                android:layout_height="97dp"
                android:contentDescription="@string/ImageView2"
                android:visibility="invisible"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="95dp"
                android:layout_height="97dp"
                android:contentDescription="@string/ImageView3"
                android:visibility="invisible"
                tools:srcCompat="@tools:sample/avatars" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="95dp"
                android:layout_height="match_parent"
                android:text="@string/textView6" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="93dp"
                android:layout_height="22dp"
                android:text="@string/textView5" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="92dp"
                android:layout_height="match_parent"
                android:text="@string/textView4" />
        </TableRow>

    </TableLayout>

</LinearLayout>